--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <p>Resolution: 8192x8192; Prompt: <span style="font-family: 'Kalam';">“A background of the top of the mountain, A hiker with a broad smile, proudly wearing red hiking jacket. A content hiker, taking in the fresh air decked out in orange hiking jacket. An excited hiker, eyes sparkling with joy donned in yellow hiking jacket. A hiker, laughing at a joke, comfortably wearing green hiking jacket. A thoughtful hiker, with a serene expression, clad in blue hiking jacket. A jubilant hiker, radiating happiness dressed in purple hiking jacket.”</span></p> -->
 
             <video id="teaser" autoplay muted loop playsinline height="150%">
-            <source src="./static/videos/mountain.mov"
-                    type="video/mov">
+            <source src="./static/videos/mountain.mp4"
+                    type="video/mp4">
             </video>
             <br>
             <br>
