update conference info and code link

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
             <span class="author-block">Seoul National University, Korea</span>
           </div>
 
+          <h5 class="is-size-4" style="text-align: center; font-size: 35px">
+            ECCV 2024 <br>
+          </h5>
+
 
           <div class="column has-text-centered">
             <div class="publication-links">
@@ -124,15 +128,15 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+              <span class="link-block">
+                <a href="https://github.com/BeyondScene/BeyondScene.git"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                   </a>
-              </span> -->
+              </span>
               <!-- Dataset Link. -->
               <span class="link-block">
                 <a href="https://drive.google.com/drive/folders/1q8ghnIfVWkN6Xo2emuLXK_O_UJEEH1Dc?usp=share_link"
