--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
   </div>
 </nav>
 
-
+<p align="center">
+  <img src="static/images/beyond-scene-logo.png" style="width: 50%; height: 50%;"/>
+</p> 
 <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
