modify homepage link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://github.com/janeyeon">
+      <a class="navbar-item" href="https://janeyeon.github.io">
       <span class="icon">
           <i class="fas fa-home"></i>
       </span>
@@ -74,7 +74,7 @@
             <span class="author-block">
               <a href="https://gwang-kim.github.io/">Gwanghyun Kim</a><sup>1, *</sup>,</span>
             <span class="author-block">
-              <a href="https://github.com/janeyeon">Hayeon Kim</a><sup>1, *</sup>,</span>
+              <a href="https://janeyeon.github.io">Hayeon Kim</a><sup>1, *</sup>,</span>
             <span class="author-block">
               <a href="https://github.com/seohoiki3215">Hoigi Seo</a><sup>1, *</sup>,</span>
             <span class="author-block">
@@ -102,15 +102,15 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <!-- <span class="link-block">
-                <a href="https://arxiv.org/pdf/2011.12948"
+              <span class="link-block">
+                <a href="https://arxiv.org/pdf/2404.04544"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
-              </span> -->
+              </span>
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2404.04544"
                    class="external-link button is-normal is-rounded is-dark">
